GH-15 fix broken tests